--- a/www/public/style/style.css
+++ b/www/public/style/style.css
@@ -24,6 +24,12 @@ p {
     gap: 30px;
 }
 
+.flex-between {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
 .player-card {
     background: linear-gradient(to bottom, transparent 50%, #ea0024), url('img/default.png');
     grid-column: 2 / -2;
@@ -162,7 +168,7 @@ header {
 
 .navbar a:hover {
     background-color: #ff4757;
-    color: #fff;
+    color: #fff !important;
 }
 
 footer {
@@ -224,9 +230,15 @@ a.a-btn {
 
 a.a-btn:hover {
     background-color: #ff4757;
+    color: white !important;
 }
 
 a.a-btn:focus {
     outline: none;
     box-shadow: 0 0 0 3px rgba(38, 143, 255, 0.5);
+}
+
+select {
+    padding: 10px !important;
+    border-radius: 0.25rem;
 }
